# OpenGL-Terrain

./: CMakeLists.txt  Terrain.sln  build.sh
Dependencies/lib/: glfw3.lib
Terrain/: Terrain.vcxproj  Terrain.vcxproj.filters
Terrain/Shader/: shader.frag  shader.vert
Terrain/src/: Chunk.cpp  Chunk.h  Quad.cpp  Quad.h  Renderable.cpp  Renderable.h  Terrain.cpp  Terrain.h  main.cpp
Terrain/src/Engine/: Entity.cpp  Entity.h  Renderer.cpp  Renderer.h  Timer.cpp  Timer.h
Terrain/src/Shader/: Shader.cpp  Shader.h  StandartShader.h
dependencies/fastnoise/: CMakeLists.txt
dependencies/gl3w/: CMakeLists.txt
include/: Camera.h  Chunk.h  Model.h  OpenGL.h  Renderer.h  Shader.h  StandartShader.h  Terrain.h  Timer.h
shaders/: shader.frag  shader.vert
src/: Chunk.cpp  Model.cpp  Renderer.cpp  Shader.cpp  StandartShader.cpp  Terrain.cpp  Timer.cpp  main.cpp
